RESOLVED FIXED75684
date.toISOString produces incorrect results for dates with ms prior to 1970
https://bugs.webkit.org/show_bug.cgi?id=75684
Summary date.toISOString produces incorrect results for dates with ms prior to 1970
Gavin Barraclough
Reported 2012-01-05 20:30:06 PST
fmod on a negative number badness.
Attachments
Fix (4.90 KB, patch)
2012-01-05 20:31 PST, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2012-01-05 20:31:21 PST
Gavin Barraclough
Comment 2 2012-01-05 20:48:30 PST
Fixed in r104266
Note You need to log in before you can comment on or make changes to this bug.