date.toISOString produces incorrect results for dates with ms prior to 1970 https://bugs.webkit.org/show_bug.cgi?id=75684

Reviewed by Sam Weinig.

Source/JavaScriptCore:

* runtime/DatePrototype.cpp:
(JSC::dateProtoFuncToISOString):

LayoutTests:

* fast/js/date-toisostring-expected.txt:
* fast/js/script-tests/date-toisostring.js:
    - Added test case



Canonical link: https://commits.webkit.org/92478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104266 268f45cc-cd09-0410-ab3c-d52691b4dbfc